# finsearch

./: .gitignore  .gitmodules  README.md
finsearch/: Cargo.toml  Dockerfile  build.txt
finsearch/examples/: api_key.rs  brave.rs  context.rs  openai.rs  rag.rs
finsearch/src/: brave.rs  main.rs  openai.rs
py_finsearch/: dummy.py  financebench_answers.pkl  financebench_df.pkl  financebench_final.pkl  fresheval_strict.ipynb  fresheval_strict.xlsx  rouge_eval_llm.ipynb
